Split world and game apart. Old Server is broken.